--- a/ads-project/app/index.html
+++ b/ads-project/app/index.html
@@ -5,30 +5,33 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 	</head>
-	<body ng-app="adsApp" >
-		<div class="navbar navbar-default navbar-fixed-top">
-	      <div class="container">
-	        <div class="navbar-header">
-	          <a href="../" class="navbar-brand">AdsApp</a>
-	          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-	          </button>
+	<body ng-app="adsApp" ng-controller="AdsController">
+		<div class="navbar navbar-default">
+	      	<div class="container">
+	        	<div class="navbar-header">
+            		<a href="../" class="navbar-brand">AdsApp</a>
+	            	<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+	            	</button>
+	        	</div>
+		        <div class="navbar-collapse collapse" id="navbar-main">
+		        	<ul class="nav navbar-nav">
+		            	<li>
+		              		<a href="#/login">Login</a>
+		            	</li>
+		            	<li>
+		              		<a href="#/register">Register</a>
+		            	</li>
+	            	</ul>
+		        </div>
 	        </div>
-	        <div class="navbar-collapse collapse" id="navbar-main">
-	        	<ul class="nav navbar-nav">
-	            	<li>
-	              		<a href="#">Login</a>
-	            	</li>
-	            	<li>
-	              		<a href="#">Register</a>
-	            	</li>
-            	</ul>
-	        </div>
+        </div>
+	        {{name}}
 		<div ng-view>
 			
 		</div>
 		<script type="text/javascript" src="lib/angular/angular.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="lib/angular/angular-route.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers/MainController.js"></script>	
 	</body>
 </html>
