--- a/ads-project/app/index.html
+++ b/ads-project/app/index.html
@@ -15,6 +15,9 @@
 	        	</div>
 		        <div class="navbar-collapse collapse" id="navbar-main">
 		        	<ul class="nav navbar-nav">
+		        		<li>
+		              		<a href="#/ads">All published ads</a>
+		            	</li>
 		            	<li>
 		              		<a href="#/login">Login</a>
 		            	</li>
@@ -25,7 +28,7 @@
 		        </div>
 	        </div>
         </div>
-	        {{name}}
+	        
 		<div ng-view>
 			
 		</div>
