--- a/ads-project/app/index.html
+++ b/ads-project/app/index.html
@@ -4,6 +4,7 @@
 		<title>ads app with angularJS</title>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body ng-app="adsApp" ng-controller="AdsController">
 		<div class="navbar navbar-default">
@@ -35,6 +36,7 @@
 		<script type="text/javascript" src="lib/angular/angular.js"></script>
 		<script type="text/javascript" src="lib/angular/angular-route.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript" src="js/controllers/MainController.js"></script>	
+		<script type="text/javascript" src="js/controllers/MainController.js"></script>
+		<script type="text/javascript" src="js/services/mainPage.js"></script> 	
 	</body>
 </html>
