--- a/ads-project/app/index.html
+++ b/ads-project/app/index.html
@@ -33,6 +33,7 @@
 		<div ng-view>
 			
 		</div>
+		<div ng-include="'templates/footer.html'"></div>
 		<script type="text/javascript" src="lib/angular/angular.js"></script>
 		<script type="text/javascript" src="lib/angular/angular-route.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
