--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="adsApp">
 	<head>
 		<title>Ads Project</title>
 		<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css" />
@@ -12,7 +12,10 @@
 			<p>softuni footer finish later</p>
 		</footer>
 		<script src="node_modules/angular/angular.js"></script>
+		<script src="node_modules/angular-route/angular-route.js"></script>
+		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/controllers/HomeCtrl.js"></script>
 	</body>
 </html>
