--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -17,5 +17,6 @@
 		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/HomeCtrl.js"></script>
+		<script src="js/directives/left-sidebar.js"></script>
 	</body>
 </html>
