fixing register.html

--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -13,10 +13,14 @@
 		</footer>
 		<script src="node_modules/angular/angular.js"></script>
 		<script src="node_modules/angular-route/angular-route.js"></script>
+		<script src="node_modules/angular-resource/angular-resource.js"></script>
 		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/HomeCtrl.js"></script>
+		<script src="js/controllers/LoginCtrl.js"></script>
+		<script src="js/controllers/RegisterCtrl.js"></script>
 		<script src="js/directives/left-sidebar.js"></script>
+		<script src="js/services/data/townsData.js"></script>
 	</body>
 </html>
