--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -14,6 +14,7 @@
 		<script src="node_modules/angular/angular.js"></script>
 		<script src="node_modules/angular-route/angular-route.js"></script>
 		<script src="node_modules/angular-resource/angular-resource.js"></script>
+		<script src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
 		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="js/app.js"></script>
@@ -22,5 +23,7 @@
 		<script src="js/controllers/RegisterCtrl.js"></script>
 		<script src="js/directives/left-sidebar.js"></script>
 		<script src="js/services/data/townsData.js"></script>
+		<script src="js/services/data/userData.js"></script>
+		<script src="js/services/authentication.js"></script>
 	</body>
 </html>
