fixing design of register.html

--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<ng-view></ng-view>
 		<footer>
-			<p>softuni footer finish later</p>
+			<p>&copy; 2014 by Software University Foundation, No Rights Reserved</p>
 		</footer>
 		<script src="node_modules/angular/angular.js"></script>
 		<script src="node_modules/angular-route/angular-route.js"></script>
