--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -21,9 +21,12 @@
 		<script src="js/controllers/HomeCtrl.js"></script>
 		<script src="js/controllers/LoginCtrl.js"></script>
 		<script src="js/controllers/RegisterCtrl.js"></script>
+		<script src="js/controllers/PublicAdsCtrl.js"></script>
 		<script src="js/directives/left-sidebar.js"></script>
+		<script src="js/directives/public-ads.js"></script>
 		<script src="js/services/data/townsData.js"></script>
 		<script src="js/services/data/userData.js"></script>
+		<script src="js/services/data/adsData.js"></script>
 		<script src="js/services/authentication.js"></script>
 	</body>
 </html>
