--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -23,11 +23,14 @@
 		<script src="js/controllers/RegisterCtrl.js"></script>
 		<script src="js/controllers/PublicAdsCtrl.js"></script>
 		<script src="js/controllers/TownsCtrl.js"></script>
+		<script src="js/controllers/CategoriesCtrl.js"></script>
 		<script src="js/directives/public-ads.js"></script>
 		<script src="js/directives/towns.js"></script>
+		<script src="js/directives/categories.js"></script>
 		<script src="js/services/data/townsData.js"></script>
 		<script src="js/services/data/userData.js"></script>
 		<script src="js/services/data/adsData.js"></script>
+		<script src="js/services/data/categoriesData.js"></script>
 		<script src="js/services/authentication.js"></script>
 	</body>
 </html>
