adding category filter

--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -32,5 +32,6 @@
 		<script src="js/services/data/adsData.js"></script>
 		<script src="js/services/data/categoriesData.js"></script>
 		<script src="js/services/authentication.js"></script>
+		<script src="js/services/filter.js"></script>
 	</body>
 </html>
