adding logout button

--- a/ads-project/index.html
+++ b/ads-project/index.html
@@ -24,6 +24,7 @@
 		<script src="js/controllers/PublicAdsCtrl.js"></script>
 		<script src="js/controllers/TownsCtrl.js"></script>
 		<script src="js/controllers/CategoriesCtrl.js"></script>
+		<script src="js/controllers/LogoutCtrl.js"></script>
 		<script src="js/directives/public-ads.js"></script>
 		<script src="js/directives/towns.js"></script>
 		<script src="js/directives/categories.js"></script>
